Added margin-top to the author name as required by the user interface

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       place-items: center;
       height: 50px;
       line-height: 50px;
+      margin-top: 20px;
     }
 
     #container .blog-card img{
@@ -107,6 +108,7 @@
       font-size: 11px;
       padding-left: 10px;
       color: var(--deep-grey);
+      
     }
 
     article{
