Removed the bold attribute from the date

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       font-family: "Figtree", sans-serif;
       font-size: 14px;
       margin: 10px 0;
-      font-weight: bold;
+      font-weight: 500;
       color: var(--deep-grey);
     }
 
